[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfuse"
version = "0.1.0"
description = "First-pass Earth Engine filesystem service primitives."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["earthengine-api"]

[project.scripts]
pyfuse = "pyfuse.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
fuse = ["fusepy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
